--- a/css/10tips.css
+++ b/css/10tips.css
@@ -185,6 +185,7 @@ footer {
     display: flex;
     justify-content: space-between;
     width: 100%;
+    line-height: 1.5rem;
 }
 
 .contact, .social-media {
