--- a/css/forum.css
+++ b/css/forum.css
@@ -187,6 +187,7 @@ footer {
     display: flex;
     justify-content: space-between;
     width: 100%;
+    line-height: 1.5rem;
 }
 
 .contact, .social-media {
