--- a/css/hvilkenbil.css
+++ b/css/hvilkenbil.css
@@ -177,6 +177,7 @@ footer {
     display: flex;
     justify-content: space-between;
     width: 100%;
+    line-height: 1.5rem;
 }
 
 .contact, .social-media {
