--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,7 @@ footer {
     display: flex;
     justify-content: space-between;
     width: 100%;
+    line-height: 1.5rem;
 }
 
 .contact, .social-media {
